# cruddb-actix-bookcase

./: Cargo.toml  README.md
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  schema.rs
